# Testing_platform

./: .dockerignore  .env  .gitignore  .htaccess  Dockerfile  IMPORT_REAL_README.txt  LICENSE  LOGIN_FIX_README.txt  README.en.md  README.kz.md  README.md  README.ru.md  README_MERGED_ONE_PROJECT.md  README_UAMS_REAL_CHANGE.txt  START_OPEN_SERVER.txt  START_OPEN_SERVER_MYSQL_ALL_MODES.txt  START_XAMPP.txt  ai.php  app.js  config.php  dashboard.php  db.php  docker-compose.yml  exam_analyzer_full_install.sql  i18n.php  import.php  index.php  install.php  layout.php  login.php  logout.php  mysql_test.php  package-lock.json  pyproject.toml  question.php  questions.php  register.php  requirements.txt  reset_admin.php  sample_exam_results.ods  (+6 more)
ai_analytics/: chart_data.php  config.php  db.php  index.php  overview.php  settings.php
ai_standalone/: .htaccess  chart_data.php  config.php  data_import.php  db.php  import_syllabus.php  index.php  login.php
analytics/: chart_data.php  config.php  full_analytics.php  index.php  rebuild_cache.php
assets/: app.css  app.js
config/: constants.py  logging_config.py  settings.py
docker/: docker-compose.yml
docs/: algorithms.md  api_docs.md
documents/: ß¿½½áípß ìæ 3 ¬paß 2025.doc  ß¿½½áípß ìæ 3 ¬paß 2026 î«ñp½8 Çpap ¼Ñsá¡¿º¼d..doc  æ¿½½áípß_Æ«aá¬á½ñd s¿apaú¿n.docx  Патологическая анатомия, патологическая физиология 3 курс рус.docx  Силлабус Жүйке жүйесі - 3 курс Педиатрия 2025-26.docx  Торакальная хирургия 3 курс рус.docx
includes/: db.php  layout.php
notebooks/: 01_eda.ipynb  инфо.txt
scripts/: analyze_questions.py  (+2 more)
(+232 files in other folders)
